public/styles/multiplayerChoose.css
.flex-container {
    display: flex;
    flex-direction:column;
}

.card{
    margin:3em auto;

}

.card.leftcard{
    margin-bottom:0em;
}

#private{
    justify-self:left;

}
@media screen and (min-width: 800px) {

    .flex-container{
        flex-direction: row;
    }


    .card.rightcard{
        margin-left:1em;
        max-height:10em;
        max-width: 15em;
        align-content:space-around;

    }
    .card{
        margin-top:7em;
    }
    
    .card.leftcard{
        margin-right:1em;
        margin-bottom:7em;
    }
    
    
}

.options {
    background: none;
    justify-content:center;
    text-align: center;
}

.roomTable {
    width: 100%;
    margin-top: 1em;
    background: none;
    overflow: 10px;

}

.roomname{
    color:white;
    text-align: right !important;
    display:right;
}

#warning {
    color: #d43d3d;
}


.flex-child {
    flex: 1;
    border: 2px rgba(0,0,0,0);
}  

.scroll {
    overflow-y: scroll;
}

